feat(backend:user): 新增根据ID查询用户详情，处理了一些domain层异常